--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>primera pagina</title>
 </head>
 <body>
-    <h1>primera </h1>
+    <h1>titulo principal </h1>
     <h1>segunda</h1>
-    
+
 </body>
 </html>
