--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>titulo principal </h1>
     <h1>segunda</h1>
-
+    <h1>tercera</h1>
+    <h1>cuarta</h1>
+    <h1>quinta</h1>
+    <h1>sexta</h1>
+    <h1>septima</h1>
 </body>
 </html>
